# senior_project_app

./: .gitignore  README.md  bulk_insert.py  codespace_setup.sh  db.sqlite3  manage.py  pyproject.toml  pytest.ini
Tests/: test_admin_views.py  test_advisor_views.py  test_student_views.py
csv_data/: advisor_projects.csv  advisors.csv  skills.csv  students.csv
projects/: admin.py  bulk_insert.py  context_processors.py  models.py  services.py  urls.py  views.py
projects/csv_data/: projects.csv  skills.csv
projects/migrations/: 0001_initial.py  0002_remove_user_groups_remove_user_user_permissions_and_more.py  0003_skill_alter_project_member_limit_and_more.py  0004_advisor_image_project_author_id_project_author_type_and_more.py  0005_alter_project_author_id_alter_project_author_type.py  0006_alter_project_advisor_alter_project_status.py  0006_project_favorited_by.py
projects/tests/: test_models.py  test_services.py  test_views.py
senior_project_app/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: settings.py
src/project_manager/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
src/project_manager/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_email.py  0004_project_skills_required.py  0005_project_member_limit.py  0006_projectapplication.py  0007_alter_project_advisor_alter_project_created_by.py  0008_favorite.py  0009_studentprofile.py  0010_advisorprofile_image.py
src/project_manager/templates/project_manager/: advisorDetailPage.html  advisorListPage.html  base.html  landingPage.html  projectApplicationDetailView.html  (+7 more)
src/spm/: urls.py
src/templates/registration/: login.html
static/css/: style.css
staticfiles/css/: bulma.css  style.css
templates/admin/: base.html
templates/projects/: .projectProposalPage.html  advisorListPage.html  advisorProfileViewPage.html  base.html  landingPage.html  loginPage.html  projectListPage.html  projectProposalPage.html  projectViewPage.html
(+5 files in other folders)
