[project]
name = "senior-project-app"
version = "0.1.0"
description = "A web-based application that students and advisors can use to share project ideas, communicate with each other, and to form teams with an assigned advisor."
authors = [
    {name = "4b-n4v",email = "ab.navilon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.5,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
