[project]
name = "senior-project-app"
version = "0.1.0"
description = "A web-based application that students and advisors can use to share project ideas, communicate with each other, and to form teams with an assigned advisor."
authors = [
    {name = "4b-n4v",email = "ab.navilon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "bulma (>=1.0.1,<2.0.0)",
    "libsass (>=0.23.0,<0.24.0)",
    "django-compressor (>=4.5.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
