[project]
name = "spm"
version = "0.1.0"
description = ""
authors = [
    {name = "4b-n4v",email = "ab.navilon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "pyright (>=1.1.400,<2.0.0)",
    "django-stubs (>=5.2.0,<6.0.0)",
    "django-select2 (>=8.4.0,<9.0.0)",
    "django-redis (>=5.4.0,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "django-simple-bulma (>=2.6.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "spm", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.pyright.dependencies]
django-stubs = "^5.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
